apps/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: prometheus
  labels:
    app: main
spec:
  selector:
    matchLabels:
      app: main
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: main
    spec:
      volumes:
        - name: nas-mount
          nfs:
            server: nas.kubes
            path: /exhdd/prometheus
            readOnly: false
        - name: piraeus-volume
          persistentVolumeClaim:
            claimName: database
      containers:
        - name: app
          image: docker.io/library/prometheus:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: piraeus-volume
              mountPath: /mnt
