apps/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: prometheus
spec:
  type: NodePort
  
  selector:
    app: main
    
  ports:
  - name: http
    port: 7766  # PROM
    targetPort: 8080
    nodePort: 30004
    protocol: TCP
