apps/prometheus/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.bamilab.space`)
      kind: Rule
      services:
        - name: service
          port: 7766
